# ksbtools

./: .gitignore  ARCHIVE_SUMMARY.md  README.md  ksb_main_page.md  msrc_Makefile.txt  msrc_README.txt  npcguild_What.html  npcguild_index.html
docs/: dicer.html  flock.html  hostlint.html  hxmd_site.html  jacket.html  make-msrc.html  mk.html  msrc.html  msrcmux.html  op.html  op_config.html  op_refs.html  op_service.html  options.html  oue.html  parallel.html  ptbw.html  qstart.html  rcsvg.html  wrapper.html  xapply.html  xclate.html
extracted/cdecl-2.12/: ITO.spec  Makefile  Makefile.host  cdecl.man  gram.y  scan.l  support.c
extracted/entomb_base-3.11/: INSTALL  Makefile  Msrc.hxmd
extracted/hostlint-1.20/: ITO.spec  Makefile  Makefile.host  README  TODO  hostlint.html  hostlint.ksh.host  (+2 more)
extracted/msrc_base-2.29/local/sbin/mmsrc/: Makefile  Makefile.host  README  TODO  boot.html  config.h  config.h.in  configure  configure.ac  machine.c  machine.h  makeme  makeme.man  mbuild  mkdtemp.c  mmreg.ksh  mmsrc.c  mmsrc.h  mmsrc.html  mmsrc.m  mmsrc.man  setenv.h
npcguild_tarballs/: calls-3.12.tgz  conserver-8.4.tgz  conserver-8.5.tgz  entomb-3.9.tgz  gnu-0.1.tgz  install-8.5.tgz  labwatch-4.3.tgz  mkcmd-8.14.tgz  modec-0.5.tgz  msrc-4.20.tgz  msrc0-0.7.tgz  ptyd-1.8.tgz  qsys-1.7.tgz  rcls-2.2.tgz  rm-1.1.tgz  shells-1.3.tgz  turnin-5.1.tgz  xapply-3.4.tgz
source/: auto.cf.host  hxmd_class.m4  jacket.pl  muxsend
tarballs/: cdecl-2.12.tgz  entomb_base-3.11.tgz  hostlint-1.20.tgz  install_base-8.30.tgz  level2s  msrc_base-2.29.tgz  perl-HXMD-1.10.tgz  scdpn-2.3.tgz
(+1260 files in other folders)
